Added endpoint for retrieving user-progress
